<resources>
    <string name="app_name" translatable="false">M3U8Loader</string>

    <string name="name">Name</string>
    <string name="url_link">Url link</string>
    <string name="settings">Settings</string>
    <string name="subtitles_url">Subtitles url</string>
    <string name="useragent" translatable="false">User agent</string>
    <string name="cookies" translatable="false">Cookies</string>

    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="play">Play</string>
    <string name="convert">Convert</string>
    <string name="converting">Converting</string>
    <string name="edit">Edit</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="load_all">Load all</string>
    <string name="stop_all">Pause all</string>
    <string name="remove_all">Remove all</string>
    <string name="about">About</string>
    <string name="stop">Pause</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="complete">Complete</string>
    <string name="loading_complete">Loading finished</string>
    <string name="converting_complete">Converting finished</string>
    <string name="loading_error">Loading error</string>
    <string name="converting_error">Error converting video</string>

    <string name="download_path">Download path</string>
    <string name="threads">Threads</string>
    <string name="repeat_error">Repeat on error</string>
    <string name="preload_fragments_size">Preload fragments size</string>
    <string name="convert_on_load_end">Convert on load end</string>
    <string name="set_def_settings">Set the default settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="simple_progress">Simple progress (if the interface is slow)</string>

    <string name="author">Author</string>
    <string name="translators">Translators</string>

    <string name="donation">Donation</string>
    <string name="donation_msg">If you like M3U8Loader we\'d be happy about a donation.\nOr you can make a beautiful photo and send the author to the email/telegram &#128522;</string>

    <string name="permission_storage_msg">Storage permission is needed to download and write files</string>
    <string name="permission_btn">GRANT</string>
    <string name="permission_request_access">Request write access</string>

    <string name="doze_request_title">Open setting window?</string>
    <string name="doze_request">To run the application in the background, you need to add the application to the whitelist</string>

    <string name="delete">Delete</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="delete_with_files">Delete with files</string>
    <string name="remove_from_list">Remove from list</string>

    <string name="selected_folder_label">Selected folder</string>
    <string name="new_directory_title">Create new folder</string>
    <string name="new_directory_name_label">Name of new folder</string>

    <string name="check_update">Check update</string>
    <string name="no_updates">No updates found</string>
    <string name="version">Version</string>
    <string name="changelog">Изменения</string>
    <string name="new_version">New version</string>
    <string name="release_new_version">Released new version of me, do you want to download it?</string>

    <string name="warn_install_convertor">This feature is not available in this version of the application</string>
    <string name="warn_clean_message">Caution! During cleaning, all settings and the downloaded file are deleted.\nClean out?</string>
    <string name="warn_wrong_format">File format not supported, open the link in another program?</string>

    <string name="error">Error</string>
    <string name="error_load_subs">Error load subtitles</string>
    <string name="error_empty_url">Error empty url</string>
    <string name="error_empty_name">Error empty name</string>
    <string name="error_directory_permission">Directory permission denied</string>
    <string name="error_directory_not_found">Directory not found</string>
    <string name="error_fragment_not_binary">Error, fragment is html page</string>
    <string name="error_create_folder">Error create folder</string>
    <string name="error_same_url">Loading with the same url already exists</string>
    <string name="error_update_parse">Error on update file parse</string>
    <string name="error_wrong_format">Wrong file format</string>

    <string name="send">Send</string>
    <string name="crash_app">"Ooooops... I crashed, but don't worry you can send error report to my developer to help him fix the issue."</string>

    <string name="choose_player">Choose player</string>
    <string-array name="players_names" translatable="false">
        <item>Choose player</item>
        <item>Default player</item>
        <item>MX Player</item>
        <item>Kodi player</item>
    </string-array>
</resources>
