<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="ru.yourok.m3u8loader.activitys.AddListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_link" />

        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri|textAutoComplete"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitles_url" />

        <EditText
            android:id="@+id/editTextSubtitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:selectAllOnFocus="true" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/DeviceDefault.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:divider="?android:attr/dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/buttonAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addBtnClick"
            android:text="@string/add" />

        <Button
            android:id="@+id/buttonDownload"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="downloadBtnClick"
            android:text="@string/download" />

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelBtnClick"
            android:text="@android:string/cancel" />
    </LinearLayout>
</LinearLayout>