<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    tools:context=".activitys.about.AboutActivity"
    android:paddingLeft="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="42sp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:singleLine="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_marginTop="24dp" />

    <LinearLayout
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:text="YouROK"
            android:paddingRight="15dp" />

        <TextView
            android:autoLink="email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8YouROK8@gmail.com" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translators"
        android:paddingBottom="10dp"
        android:layout_marginTop="24dp" />

    <TextView
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Chinese" />

    <LinearLayout
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:text="TayLin"
            android:paddingRight="15dp" />

        <TextView
            android:autoLink="email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tay799@163.com" />
    </LinearLayout>

</LinearLayout>